<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="heading">My Nanodegree Apps!</string>
    <string name="spotify_streamer">spotify streamer</string>
    <string name="super_duo1">scores app</string>
    <string name="super_duo2">library app</string>
    <string name="ant_terminator">build it bigger</string>
    <string name="materialize">bacon reader</string>
    <string name="capstone">capstone: my own app</string>
</resources>
