<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_blue_grey_800"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/heading"
        style="@style/HeadingFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/heading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/media_streamer_button"
        style="@style/ButtonFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/non_capstone_button"
        android:onClick="displayMessage"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/scores_app_button"
        style="@style/ButtonFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/media_streamer_button"
        android:layout_alignStart="@+id/media_streamer_button"
        android:layout_below="@+id/media_streamer_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/non_capstone_button"
        android:onClick="displayMessage"
        android:text="@string/super_duo1" />

    <Button
        android:id="@+id/library_app_button"
        style="@style/ButtonFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scores_app_button"
        android:layout_alignStart="@+id/scores_app_button"
        android:layout_below="@+id/scores_app_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/non_capstone_button"
        android:onClick="displayMessage"
        android:text="@string/super_duo2" />

    <Button
        android:id="@+id/build_it_bigger_button"
        style="@style/ButtonFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/library_app_button"
        android:layout_alignStart="@+id/library_app_button"
        android:layout_below="@+id/library_app_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/non_capstone_button"
        android:onClick="displayMessage"
        android:text="@string/ant_terminator" />


    <Button
        android:id="@+id/capstone_button"
        style="@style/ButtonFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/build_it_bigger_button"
        android:layout_alignStart="@+id/build_it_bigger_button"
        android:layout_below="@+id/build_it_bigger_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/non_capstone_button"
        android:onClick="displayMessage"
        android:text="@string/materialize" />

    <Button
        android:id="@+id/bacon_reader_button"
        style="@style/ButtonFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/capstone_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/capstone_button"
        android:onClick="displayMessage"
        android:text="@string/capstone" />


</RelativeLayout>
